--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,6 @@ jobs:
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
 
-  # With no caching at all the entire ci process takes 3m to complete!
   pytest:
     runs-on: ubuntu-latest
 
@@ -52,6 +51,28 @@ jobs:
 
       - name: Run Django Tests
         run: docker compose -f local.yml run django pytest
+
+      - name: Tear down the Stack
+        run: docker compose -f local.yml down
+
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
+
+      - name: Build the Stack
+        run: docker compose -f local.yml build django
+
+      - name: Build the docs
+        run: docker compose -f docs.yml build docs
+
+      - name: Run DB Migrations
+        run: docker compose -f local.yml run --rm django python manage.py migrate
+
+      - name: Run Django Tests
+        run: docker compose -f local.yml run django tests
 
       - name: Tear down the Stack
         run: docker compose -f local.yml down
